# swagger_server/swagger/swagger.yaml
@@ -1232,6 +1232,30 @@ paths:
       security:
       - classdeck_auth: []
       x-swagger-router-controller: "swagger_server.controllers.student_taken_classes_controller"
+  /student_taken_classes/{nuid}:
+    get:
+      tags:
+      - "student_taken_classes"
+      summary: "Finds  student_taken_classes by NUID"
+      description: "Returns a list student_taken_classes"
+      operationId: "get_student_taken_classes_by_nuid"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "nuid"
+        in: "path"
+        description: "nuid of the student related to the student_taken_classes to\
+          \ return"
+        required: true
+        type: "integer"
+        minimum: 1
+      responses:
+        200:
+          description: "successful operation"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "StudentTakenClasses not found"
   /student_taken_classes/{nuid}/{class_dept}/{class_number}:
     get:
       tags:
